[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/go-do/scripts/mentalMap.gd" type="Script" id=2]

[node name="mentalMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 6.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="new" type="Button" parent="menu"]
margin_right = 113.0
margin_bottom = 20.0
text = "Nuevo proyecto"

[node name="load" type="Button" parent="menu"]
margin_left = 118.0
margin_right = 169.0
margin_bottom = 20.0
text = "Cargar"

[node name="save" type="Button" parent="menu"]
margin_left = 174.0
margin_right = 236.0
margin_bottom = 20.0
text = "Guardar"

[node name="save as" type="Button" parent="menu"]
margin_left = 241.0
margin_right = 343.0
margin_bottom = 20.0
text = "Guardar como"

[node name="delete all nodes" type="Button" parent="menu"]
margin_left = 348.0
margin_right = 445.0
margin_bottom = 20.0
text = "Eliminar todo"

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
zoom_min = 1.0
zoom_max = 1.0
show_zoom_label = true

[node name="new_task" type="WindowDialog" parent="."]
margin_left = 345.0
margin_top = 234.0
margin_right = 645.0
margin_bottom = 314.0
window_title = "Nueva tarea"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window_text_task" type="TextEdit" parent="new_task/VBoxContainer"]
margin_right = 280.0
margin_bottom = 46.0
size_flags_horizontal = 7
size_flags_vertical = 7
shortcut_keys_enabled = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="new_task/VBoxContainer"]
margin_top = 50.0
margin_right = 280.0
margin_bottom = 70.0
text = "Aceptar"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 481.0
margin_bottom = 282.0
rect_min_size = Vector2( 150, 52.5 )
size_flags_horizontal = 5
size_flags_vertical = 5
window_title = "Guardar un Archivo"
resizable = true
access = 2
filters = PoolStringArray( "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files", "*.json ; JSON files" )
show_hidden_files = true

[connection signal="pressed" from="menu/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="menu/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="menu/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="menu/save as" to="." method="_on_save_as_pressed"]
[connection signal="pressed" from="menu/delete all nodes" to="." method="_on_delete_all_nodes_pressed"]
[connection signal="connection_to_empty" from="GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="pressed" from="new_task/VBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="popup_hide" from="info_node" to="info_node" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node2" to="info_node2" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node3" to="info_node3" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node4" to="info_node4" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node5" to="info_node5" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node6" to="info_node6" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node7" to="info_node7" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node8" to="info_node8" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node9" to="info_node9" method="_on_info_node_popup_hide"]
[connection signal="popup_hide" from="info_node10" to="info_node10" method="_on_info_node_popup_hide"]
